--- a/1_notmnist.ipynb
+++ b/1_notmnist.ipynb
@@ -436,9 +436,9 @@
     "\n",
     "Let's verify that the data still looks good. Displaying a sample of the labels and images from the ndarray. Hint: you can use matplotlib.pyplot.\n",
     "\n",
-    "We have ten class eqv pickle[0]..pickle[9] (A-Z). One pickle when convert to numpy array it have:"
-    "\n"
-    "1872 numpy array follow index a[0]..a[1872] small data, 52911 big data"
+    "We have ten class eqv pickle[0]..pickle[9] (A-Z). One pickle when convert to numpy array it have:",
+    "\n",
+    "1872 numpy array follow index a[0]..a[1872] small data, 52911 big data",
     "---"
    ]
   },
