--- a/1_notmnist.ipynb
+++ b/1_notmnist.ipynb
@@ -563,6 +563,7 @@
     "  return dataset, labels\n",
     "\n",
     "def merge_datasets(pickle_files, train_size, valid_size=0):\n",
+    "  #num_classes = 10 class\n"
     "  num_classes = len(pickle_files)\n",
     "  valid_dataset, valid_labels = make_arrays(valid_size, image_size)\n",
     "  train_dataset, train_labels = make_arrays(train_size, image_size)\n",
